crates/plotnik-tests/tests/03-analyze/direct_recursion/no_input_sibling_string_branch.txt
A = [
  (A)
  'escape'
]
------------------ DIAGNOSTICS -------------------
error: infinite recursion: cycle consumes no input
 --> query.ptk:2:4
  |
2 |   (A)
  |    ^
  |    |
  |    references itself
  |
help: recursive references must consume input before recursing
-------------------- SYMBOLS ---------------------
A
  A (cycle)
